<package format="2">
  <name>eye_in_hand_camera</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Simplified ABB Gripper</p>
    <p>This package contains configuration data, 3D models and launch files
for Simplified ABB Gripper robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="mohammed.alaa200080@gmail.com" />
  <license>BSD</license>
  
  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit2/issues</url>
  <url type="repository">https://github.com/moveit/moveit2</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>ros2srrc_robots</exec_depend>
  <!-- The next 2 packages are required for the gazebo simulation.
       We don't include them by default to prevent installing gazebo and all its dependencies. -->
  <!-- <exec_depend>joint_trajectory_controller</exec_depend> -->
  <!-- <exec_depend>gazebo_ros_control</exec_depend> -->
  <exec_depend>controller_manager</exec_depend>
  <!-- <exec_depend>dual_arms</exec_depend> -->
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
      <build_type>ament_cmake</build_type>
      <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>

<!-- 
<package format="3">
  <name>abb_head</name>
  <version>0.3.0</version>
  <description>
     An automatically generated package with all the configuration and launch files for using the dual_arms with the MoveIt Motion Planning Framework
  </description>
  <maintainer email="Nourwaelzakaria2001@gmail.com">Nour Wael</maintainer>

  <license>BSD-3-Clause</license>

  

  <author email="Nourwaelzakaria2001@gmail.com">Nour Wael</author>

</package> -->
